--- a/css/index.css
+++ b/css/index.css
@@ -2,3 +2,59 @@
 @import url("reset.css");
 @import url("variables.css");
 
+body {
+    background-color: var(--clr-white);
+    font-family: var(--ff-body);
+}
+
+/* utility classes */
+.center {
+    width: min(1202px, 100% - 1rem);
+    margin-inline: auto;
+}
+
+/* header styles */
+.head-top {
+    display: flex;
+    justify-content: space-between;
+    padding-block: 1rem; 
+}
+
+.head-bottom {
+    padding-block: 2.5rem;
+    background-image: url("../img/photo/ACME_Background-Pattern.png");
+}
+
+.logo {
+    height: 4rem;
+}
+
+nav {
+    display: flex;
+    align-items: end;
+
+    & ul {
+        display: flex;
+        justify-content: space-between;
+        gap: 2rem;
+        font-family: var(--ff-heading);
+        font-weight: var(--fw-medium);
+        font-size: var(--fs-500);
+    }
+
+    & a {
+        color: var(--clr-black);
+        text-decoration: none;
+    }
+}
+
+h1 {
+    font-family: var(--ff-heading);
+    font-size: var(--fs-700);
+    font-weight: var(--fw-medium);
+    color: var(--clr-yellow)
+}
+
+/* breadcrumbs styles */
+
+
