--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,10 @@ body {
     color: var(--clr-black);
 }
 
+a {
+    color: var(--clr-yellow);
+}
+
 /* utility classes */
 .center {
     width: min(1202px, 100% - 1rem);
@@ -53,6 +57,7 @@ h1 {
     font-family: var(--ff-heading);
     font-size: var(--fs-700);
     font-weight: var(--fw-medium);
+    line-height: 1.4;
     color: var(--clr-yellow)
 }
 
@@ -60,7 +65,7 @@ h1 {
 
 .breadcrumbs {
     background-color: var(--clr-yellow);
-    padding-block: .25rem;
+    padding-block: 0.25rem;
 
     & div {
         display: flex;
@@ -76,9 +81,363 @@ h1 {
         font-family: var(--ff-heading);
         font-weight: var(--fw-regular);
         font-size: var(--fs-300);
-        line-height: 24px;
+        line-height: 2;
         text-decoration: none;
-        color: var(--clr-black)
+        color: var(--clr-black);
     }
 }
+
+/* styles for grid */
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    column-gap: 1rem;
+    padding-block: 4rem;
+
+    & article {
+        grid-column: 1/5;
+        margin-top: 4rem;
+    }
+}
+
+.top-image {
+    grid-column: 1/7;
+    width: 100%;
+    aspect-ratio: 16/5;
+    object-fit: cover;
+    object-position: 50% 42%;
+}
+
+/* styles for article */
+
+article h2 {
+    font-family: var(--ff-heading);
+    font-weight: var(--fw-semi-bold);
+    line-height: 1.4;
+    font-size: var(--fs-600);
+    color: var(--clr-green);
+    margin-bottom: 0.8rem;
+}
+
+p {
+    font-family: var(--ff-body);
+    font-weight: var(--fw-regular);
+    font-size: var(--fs-400);
+    line-height: 1.7;
+    color: var(--clr-ink)
+}
+
+p + p {
+    margin-top: 1rem;
+}
+
+article h3 {
+    font-family: var(--ff-body);
+    font-weight: var(--fw-regular);
+    font-size: var(--fs-500);
+    line-height: 1.4;
+    margin-block: 2.5rem 0.3rem;
+    color: var(--clr-green);
+}
+
+time {
+    display: block;
+    font-family: var(--ff-body);
+    font-weight: var(--fw-light);
+    font-size: var(--fs-400);
+    margin-bottom: 0.3rem;
+}
+
+/* list im text styles */
+
+article h4 {
+    font-family: var(--ff-body);
+    font-weight: var(--fw-regular);
+    font-size: var(--fs-400);
+    line-height: 1.7;
+    margin-block: 1.5rem 0.8rem;
+}
+
+.test-ul {
+    font-family: var(--ff-body);
+    font-weight: var(--fw-regular);
+    font-size: var(--fs-400);
+    line-height: 1.5;
+    color: var(--clr-ink);
+    margin-bottom: 1.5rem;
+}
+
+.test-li {
+    display: flex;
+    min-width: 0;
+    margin-block: 0.8rem;
+}
+
+.test-img {
+    height: 1.15rem;
+    margin-right: 1rem;
+}
+
+/* slider styles */
+
+figure {
+    position: relative;
+    margin-block: 3rem;
+    border-bottom: solid 4px var(--clr-yellow);
+}
+
+figcaption {
+    font-family: var(--ff-heading);
+    font-weight: var(--fw-light);
+    font-size: var(--fs-400);
+    line-height: 1.43;
+    color: var(--clr-ink);
+    margin-block: 1rem;
+}
+
+
+.slide {
+    width: 100%;
+    aspect-ratio: 16 / 5;
+    background-image: url("../img/photo/ACME_Article-Picture.jpg");
+    background-size: 120%;
+    background-position: 85% 66%;
+}
+
+.slide-buttons {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+
+    & button {
+        border: 0;
+        padding: 1rem;
+        background-color: var(--clr-yellow);
+        cursor: pointer;
+    }
+}
+
+.icon {
+    height: 2.2rem;
+    filter: invert(90%) sepia(100%) saturate(2%) hue-rotate(319deg) brightness(107%) contrast(100%);
+}
+
+/* zitat styles */
+
+blockquote {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 1rem;
+    margin-block: 3rem;
+    background: linear-gradient(to right, var(--clr-green-light) calc((100% - 16px) / 2), transparent 0);
+
+    & div {
+        grid-column: 2/5;
+        display: flex;
+        flex-direction: column;
+    }
+
+    & footer {
+        align-self: flex-end;
+    }
+
+    & p {
+        font-family: var(--ff-body);
+        font-weight: var(--fw-regular);
+        font-size: var(--fs-500);
+        line-height: 1.4;
+        margin-block: 2rem 0.8rem;
+    }
+}
+
+/* sidebar styles */
+
+aside {
+    grid-column: 5/7;
+    margin-top: 4rem;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+
+.card__heading {
+    font-family: var(--ff-heading);
+    font-size: var(--fs-700);
+    font-weight: var(--fw-medium);
+    color: var(--clr-green-light);
+    line-height: 0.87;
+    transform: translate(-0.06em);
+}
+
+.card__content {
+    background-color: var(--clr-green-light);
+    padding: 2em;
+
+    & h3 {
+        font-family: var(--ff-heading);
+        font-weight: var(--fw-semi-bold);
+        line-height: 1.6;
+        font-size: var(--fs-600);
+        color: var(--clr-ink);
+        margin-block: 1.5rem 1rem;
+
+        & .subtitle {
+            font-family: var(--ff-body);
+            font-weight: var(--fw-light);
+            line-height: 1.6;
+            font-size: var(--fs-400);
+            color: var(--clr-ink);
+            display: block;
+        }
+    }
+}
+
+.portrait {
+    width: 100%;
+    aspect-ratio: 3 / 2;
+    object-fit: cover;
+}
+
+/* erste sidebar liste */
+
+.first-list li + li {
+    margin-top: 0.7rem;
+}
+
+.first-list-item {
+    display: flex;
+    align-items: center;
+    font-family: var(--ff-body);
+    font-weight: var(--fw-regular);
+    font-size: var(--fs-400);
+    line-height: 1.7;
+    color: var(--clr-ink)
+}
+
+.first-list-item::before {
+    content: "";
+    display: inline-block;
+    flex-shrink: 0;
+    height: 1.6rem;
+    width: 1.6rem;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-inline: 0.2rem 1.2rem;
+    opacity: 0.3;
+}
+
+.first-list-item:nth-of-type(1)::before {
+    background-image: url("../img/icon/Phone.svg");
+}
+.first-list-item:nth-of-type(2)::before {
+    background-image: url("../img/icon/Clock.svg");
+}
+
+/* zweite sidebar liste */
+
+.second-list li + li {
+    margin-top: 1rem;
+}
+
+.second-list-item {
+    display: flex;
+    align-items: center;
+    font-family: var(--ff-body);
+    font-weight: var(--fw-regular);
+    font-size: var(--fs-400);
+    line-height: 1.7;
+    color: var(--clr-ink);
+}
+
+.list-icon {
+    height: 1.8rem;
+    filter: invert(90%) sepia(100%) saturate(2%) hue-rotate(319deg) brightness(107%) contrast(100%);
+}
+
+.second-list-item button {
+    border: 0;
+    background-color: var(--clr-yellow);
+    font-family: var(--ff-heading);
+    font-weight: var(--fw-light);
+    font-size: var(--fs-400);
+    line-height: 1.43;
+    color: var(--clr-ink);
+    display: flex;
+    padding: 0.3rem 1rem 0.3rem 0.4rem;
+    align-items: center;
+    gap: 0.9rem;
+    cursor: pointer;
+}
+
+.second-list-item::before {
+    content: "";
+    display: inline-block;
+    flex-shrink: 0;
+    height: 1.6rem;
+    width: 1.6rem;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-inline: 0.2rem 1.2rem;
+    opacity: 0.3;
+}
+
+.second-list-item:nth-of-type(1)::before {
+    background-image: url("../img/icon/Image.svg");
+}
+.second-list-item:nth-of-type(2)::before {
+    background-image: url("../img/icon/File.svg");
+}
+
+.second-list-item:nth-of-type(3)::before {
+    background-image: url("../img/icon/Image.svg");
+}
+.second-list-item:nth-of-type(4)::before {
+    background-image: url("../img/icon/File.svg");
+}
+
+/* dritte sidebar liste */
+
+.third-list li + li {
+    margin-top: 1rem;
+}
+
+.third-list-item {
+    display: flex;
+    align-items: center;
+    font-family: var(--ff-body);
+    font-weight: var(--fw-regular);
+    font-size: var(--fs-400);
+    line-height: 1.7;
+    color: var(--clr-ink);
+}
+
+.third-list-item::before {
+    content: "";
+    display: inline-block;
+    flex-shrink: 0;
+    height: 1.6rem;
+    width: 1.6rem;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-inline: 0.2rem 1.2rem;
+    opacity: 0.3;
+}
+
+.third-list-item:nth-of-type(1)::before {
+    background-image: url("../img/icon/Extern-Link.svg");
+}
+.third-list-item:nth-of-type(2)::before {
+    background-image: url("../img/icon/Link.svg");
+}
+
+.third-list-item:nth-of-type(3)::before {
+    background-image: url("../img/icon/Extern-Link.svg");
+}
+
+
+
 
