--- a/css/index.css
+++ b/css/index.css
@@ -92,13 +92,16 @@ h1 {
 .grid {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    column-gap: 1rem;
-    padding-block: 4rem;
+    column-gap: 16px;
+}
 
-    & article {
-        grid-column: 1/5;
-        margin-top: 4rem;
-    }
+div.grid {
+    padding-block: 4rem 5rem;
+}
+
+article {
+    grid-column: 1/5;
+    margin-top: 4rem;
 }
 
 .top-image {
@@ -367,7 +370,7 @@ aside {
     line-height: 1.43;
     color: var(--clr-ink);
     display: flex;
-    padding: 0.3rem 1rem 0.3rem 0.4rem;
+    padding: 0.2rem 1rem 0.2rem 0.4rem;
     align-items: center;
     gap: 0.9rem;
     cursor: pointer;
@@ -438,6 +441,154 @@ aside {
     background-image: url("../img/icon/Extern-Link.svg");
 }
 
+/* footer styles */
+
+.footer {
+    background-color: var(--clr-ink);
+}
+
+.footer-top {
+    background-image: url("../img/photo/ACME_Background-Pattern.png");
+}
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-block: 0.6rem;
+    color: var(--clr-white);
+
+    & div {
+        display: flex;
+        gap: 2rem;
+    }
+
+    & div + div {
+        gap: 0.5rem;
+    }
+
+    & img {
+        height: 1.5rem;
+        filter: invert(90%) sepia(82%) saturate(17%) hue-rotate(295deg) brightness(106%) contrast(100%);
+    }
+}
+
+.social-links a {
+    background-color: var(--clr-yellow);
+    padding: 0.3rem;
+}
+
+/* form styles */
+
+form {
+    padding-block: 4rem;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 3.5rem repeat(4, 2.25rem 2.75rem) 4rem;
+    column-gap: 1rem;
+
+    & h2 {
+        font-family: var(--ff-heading);
+        font-weight: var(--fw-semi-bold);
+        font-size: 1.75rem;
+        color: var(--clr-white);
+        grid-column: 1/7;
+    }
+
+    & label {
+        color: var(--clr-white);
+        align-self: center;
+        margin-top: 0.5rem;
+    }
+
+    & select {
+        appearance: none;
+        background-image: url("../img/icon/Arrowhead_Down.svg");
+        background-repeat: no-repeat;
+        background-position: right .7em top 50%, 0 0;
+        background-size: 1.5em auto, 100%;
+    }
+}
+
+.form-left {
+    grid-column: 1/4;
+    grid-row: 2/10;
+    display: grid;
+    grid-template-rows: subgrid;
+}
+
+.form-right {
+    grid-column: 4/7;
+    grid-row: 2/10;
+    display: grid;
+    grid-template-rows: subgrid;
+
+    & textarea {
+        grid-row: 2/10;
+        resize: none;
+    }
+}
+
+.form-bottom {
+    grid-column: 1/7;
+    grid-row: 10/10;
+    display: flex;
+    align-self: end;
+    align-items: center;
+
+    & label {
+        user-select: none;
+    }
+
+    & input[type=checkbox] { 
+        display: none; 
+    }
+
+    & input[type=checkbox] + label {
+      padding-left: 30px;
+      position: relative;
+    }
+    
+    & input[type=checkbox] + label::before {
+      display: block;
+      border: 2px solid var(--clr-white);
+      border-radius: 3px;
+      left: 3px;
+      top: 3px;
+      height: 14px;
+      width: 14px;
+      content: "";
+      position: absolute;
+      line-height: 14px;
+    }
+    
+    /* falls unchecked
+
+    & input[type=checkbox]:invalid + label::before {
+    }
+
+    */
+    
+    & input[type=checkbox]:checked + label::before {
+      content: "";
+      background-color: var(--clr-yellow);
+    }
+
+    & button {
+        margin-left: auto;
+        border: 0;
+        background-color: var(--clr-yellow);
+        font-family: var(--ff-heading);
+        font-weight: var(--fw-light);
+        font-size: var(--fs-400);
+        line-height: 1.43;
+        color: var(--clr-ink);
+        display: flex;
+        padding: 0.2rem 1rem 0.2rem 0.4rem;
+        align-items: center;
+        gap: 0.9rem;
+        cursor: pointer;
+    }
+}
 
 
 
