--- a/css/fonts.css
+++ b/css/fonts.css
@@ -52,3 +52,56 @@
     font-display: swap;
 }
 
+body {
+    font-family: var(--ff-body);
+    font-weight: var(--fw-regular);
+    font-size: var(--fs-400);
+    line-height: 1.7;
+    color: var(--clr-ink);
+}
+
+.nav-font {
+    font-family: var(--ff-heading);
+    font-weight: var(--fw-medium);
+    font-size: var(--fs-600);
+    line-height: 1.5;
+}
+
+.crumbs-font {
+    font-family: var(--ff-heading);
+    font-weight: var(--fw-regular);
+    font-size: var(--fs-300);
+    line-height: 2;
+}
+
+.h1-font {
+    font-family: var(--ff-heading);
+    font-size: var(--fs-700);
+    font-weight: var(--fw-medium);
+    line-height: 1.4;
+    color: var(--clr-yellow)
+}
+
+.h2-font {
+    font-family: var(--ff-heading);
+    font-weight: var(--fw-semi-bold);
+    line-height: 1.4;
+    font-size: var(--fs-600);
+    color: var(--clr-green);
+}
+
+.h3-font {
+    font-family: var(--ff-body);
+    font-weight: var(--fw-regular);
+    font-size: var(--fs-500);
+    line-height: 1.4;
+    color: var(--clr-green);
+}
+
+.info-font {
+    font-family: var(--ff-heading);
+    font-weight: var(--fw-light);
+    font-size: var(--fs-400);
+    line-height: 1.43;
+    color: var(--clr-ink);
+}
