--- a/css/index.css
+++ b/css/index.css
@@ -1,206 +1,82 @@
 @import url("fonts.css");
-@import url("reset.css");
+@import url("global.css");
 @import url("variables.css");
 
-body {
-    font-family: var(--ff-body);
-    background-color: var(--clr-white);
-    color: var(--clr-black);
+@import url("header.css");
+@import url("footer.css");
+
+main {
+    padding-block: 4rem;
 }
 
-a {
-    color: var(--clr-yellow);
-}
-
-/* utility classes */
-.center {
-    width: min(1202px, 100% - 1rem);
-    margin-inline: auto;
-}
-
-/* header styles */
-.header-top-row {
-    display: flex;
-    justify-content: space-between;
-    padding-block: 1rem; 
-}
-
-.header-bottom-row {
-    padding-block: 2.5rem;
-    background-image: url("../img/photo/ACME_Background-Pattern.png");
-}
-
-.logo {
-    height: 4rem;
-}
-
-nav {
-    display: flex;
-    align-items: end;
-
-    & ul {
-        display: flex;
-        justify-content: space-between;
-        gap: 2rem;
-        font-family: var(--ff-heading);
-        font-weight: var(--fw-medium);
-        font-size: var(--fs-500);
-    }
-
-    & a {
-        color: var(--clr-black);
-        text-decoration: none;
-    }
-}
-
-h1 {
-    font-family: var(--ff-heading);
-    font-size: var(--fs-700);
-    font-weight: var(--fw-medium);
-    line-height: 1.4;
-    color: var(--clr-yellow)
-}
-
-/* breadcrumb styles */
-
-.breadcrumbs {
-    background-color: var(--clr-yellow);
-    padding-block: 0.25rem;
-
-    & div {
-        display: flex;
-        gap: 1rem;
-        align-items: center;
-    }
-
-    & img {
-        height: var(--fs-300);
-    }
-
-    & a {
-        font-family: var(--ff-heading);
-        font-weight: var(--fw-regular);
-        font-size: var(--fs-300);
-        line-height: 2;
-        text-decoration: none;
-        color: var(--clr-black);
-    }
-}
-
-/* styles for grid */
-
-.grid {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    column-gap: 16px;
-}
-
-div.grid {
-    padding-block: 4rem 5rem;
-}
+/* styles for article styles for article styles for article styles for article */
+/* styles for article styles for article styles for article styles for article */
 
 article {
     grid-column: 1/5;
-    margin-top: 4rem;
+
+    & time {
+        display: block;
+        margin-bottom: 0.3rem;
+    }
+
+    & h2 {
+        margin-bottom: 0.8rem;
+    }
+
+    & h3 {
+        margin-block: 2.5rem 0.3rem;
+    }
+
+    & h4 {
+        margin-block: 1.5rem 0.8rem;
+    }
+
+    & p + p {
+        margin-top: 1rem;
+    }
 }
 
-.top-image {
+.full-width-photo {
     grid-column: 1/7;
     width: 100%;
     aspect-ratio: 16/5;
     object-fit: cover;
     object-position: 50% 42%;
+    margin-bottom: 4rem;
 }
 
-/* styles for article */
+/* list im text styles list im text styles list im text styles list im text styles */
+/* list im text styles list im text styles list im text styles list im text styles */
 
-article h2 {
-    font-family: var(--ff-heading);
-    font-weight: var(--fw-semi-bold);
-    line-height: 1.4;
-    font-size: var(--fs-600);
-    color: var(--clr-green);
-    margin-bottom: 0.8rem;
-}
 
-p {
-    font-family: var(--ff-body);
-    font-weight: var(--fw-regular);
-    font-size: var(--fs-400);
-    line-height: 1.7;
-    color: var(--clr-ink)
-}
-
-p + p {
-    margin-top: 1rem;
-}
-
-article h3 {
-    font-family: var(--ff-body);
-    font-weight: var(--fw-regular);
-    font-size: var(--fs-500);
-    line-height: 1.4;
-    margin-block: 2.5rem 0.3rem;
-    color: var(--clr-green);
-}
-
-time {
-    display: block;
-    font-family: var(--ff-body);
-    font-weight: var(--fw-light);
-    font-size: var(--fs-400);
-    margin-bottom: 0.3rem;
-}
-
-/* list im text styles */
-
-article h4 {
-    font-family: var(--ff-body);
-    font-weight: var(--fw-regular);
-    font-size: var(--fs-400);
-    line-height: 1.7;
-    margin-block: 1.5rem 0.8rem;
-}
-
-.test-ul {
-    font-family: var(--ff-body);
-    font-weight: var(--fw-regular);
-    font-size: var(--fs-400);
-    line-height: 1.5;
-    color: var(--clr-ink);
+.bullet-points {
     margin-bottom: 1.5rem;
+
+    & li {
+        margin-block: 0.8rem;
+    }
+
+    & img {
+        height: 1.15rem;
+        margin-right: 1rem;
+    }
 }
 
-.test-li {
-    display: flex;
-    min-width: 0;
-    margin-block: 0.8rem;
-}
+/* slider styles slider styles slider styles slider styles slider styles */
+/* slider styles slider styles slider styles slider styles slider styles */
 
-.test-img {
-    height: 1.15rem;
-    margin-right: 1rem;
-}
-
-/* slider styles */
-
-figure {
+.slideshow {
     position: relative;
     margin-block: 3rem;
     border-bottom: solid 4px var(--clr-yellow);
+
+    & figcaption {
+        margin-block: 0.7rem;
+    }
 }
 
-figcaption {
-    font-family: var(--ff-heading);
-    font-weight: var(--fw-light);
-    font-size: var(--fs-400);
-    line-height: 1.43;
-    color: var(--clr-ink);
-    margin-block: 1rem;
-}
-
-
-.slide {
+.slideshow__slide {
     width: 100%;
     aspect-ratio: 16 / 5;
     background-image: url("../img/photo/ACME_Article-Picture.jpg");
@@ -208,66 +84,65 @@ figcaption {
     background-position: 85% 66%;
 }
 
-.slide-buttons {
+.slideshow__buttons {
     position: absolute;
     right: 0;
     bottom: 0;
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
 
     & button {
         border: 0;
         padding: 1rem;
         background-color: var(--clr-yellow);
         cursor: pointer;
+
+        & img {
+            height: 2.2rem;
+            filter: invert(90%) sepia(100%) saturate(2%) hue-rotate(319deg) brightness(107%) contrast(100%);
+        }
+    }
+
+    & button + button {
+        margin-top: 0.25rem;
     }
 }
 
-.icon {
-    height: 2.2rem;
-    filter: invert(90%) sepia(100%) saturate(2%) hue-rotate(319deg) brightness(107%) contrast(100%);
-}
+/* zitat styles zitat styles zitat styles zitat styles zitat styles */
+/* zitat styles zitat styles zitat styles zitat styles zitat styles */
 
-/* zitat styles */
-
-blockquote {
+.quote {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     column-gap: 1rem;
     margin-block: 3rem;
     background: linear-gradient(to right, var(--clr-green-light) calc((100% - 16px) / 2), transparent 0);
+}
 
-    & div {
-        grid-column: 2/5;
-        display: flex;
-        flex-direction: column;
-    }
+.quote__inner-container {
+    grid-column: 2/5;
 
-    & footer {
+    & cite {
         align-self: flex-end;
     }
 
     & p {
-        font-family: var(--ff-body);
-        font-weight: var(--fw-regular);
         font-size: var(--fs-500);
         line-height: 1.4;
         margin-block: 2rem 0.8rem;
     }
+    
 }
 
 /* sidebar styles */
 
 aside {
     grid-column: 5/7;
-    margin-top: 4rem;
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
+
+    & div:nth-of-type(2) {
+        margin-block: 3rem;
+    }
 }
 
-.card__heading {
+.card-header {
     font-family: var(--ff-heading);
     font-size: var(--fs-700);
     font-weight: var(--fw-medium);
@@ -276,319 +151,68 @@ aside {
     transform: translate(-0.06em);
 }
 
-.card__content {
+.card {
     background-color: var(--clr-green-light);
     padding: 2em;
-
-    & h3 {
-        font-family: var(--ff-heading);
-        font-weight: var(--fw-semi-bold);
-        line-height: 1.6;
-        font-size: var(--fs-600);
-        color: var(--clr-ink);
-        margin-block: 1.5rem 1rem;
-
-        & .subtitle {
-            font-family: var(--ff-body);
-            font-weight: var(--fw-light);
-            line-height: 1.6;
-            font-size: var(--fs-400);
-            color: var(--clr-ink);
-            display: block;
-        }
-    }
 }
 
-.portrait {
+.card__picture {
     width: 100%;
     aspect-ratio: 3 / 2;
     object-fit: cover;
 }
 
+.card-title {
+    color: var(--clr-ink);
+    margin-block: 1.5rem 1rem;
+
+    & .subtitle {
+        display: block;
+        font-family: var(--ff-body);
+        font-weight: var(--fw-light);
+        line-height: 1.6;
+        font-size: var(--fs-400);
+        color: var(--clr-ink);
+    }
+}
+
 /* erste sidebar liste */
 
-.first-list li + li {
-    margin-top: 0.7rem;
+.card__list {
+    & li + li {
+        margin-top: 0.7rem; 
+    }
+
+    & li::before {
+        content: "";
+        display: inline-block;
+        flex-shrink: 0;
+        height: 1.6rem;
+        width: 1.6rem;
+        background-size: contain;
+        background-repeat: no-repeat;
+        margin-inline: 0.2rem 1.2rem;
+        opacity: 0.3;
+    }
 }
 
-.first-list-item {
-    display: flex;
-    align-items: center;
-    font-family: var(--ff-body);
-    font-weight: var(--fw-regular);
-    font-size: var(--fs-400);
-    line-height: 1.7;
-    color: var(--clr-ink)
-}
-
-.first-list-item::before {
-    content: "";
-    display: inline-block;
-    flex-shrink: 0;
-    height: 1.6rem;
-    width: 1.6rem;
-    background-size: contain;
-    background-repeat: no-repeat;
-    margin-inline: 0.2rem 1.2rem;
-    opacity: 0.3;
-}
-
-.first-list-item:nth-of-type(1)::before {
+.phone-icon::before {
     background-image: url("../img/icon/Phone.svg");
 }
-.first-list-item:nth-of-type(2)::before {
+.clock-icon::before {
     background-image: url("../img/icon/Clock.svg");
 }
 
-/* zweite sidebar liste */
-
-.second-list li + li {
-    margin-top: 1rem;
-}
-
-.second-list-item {
-    display: flex;
-    align-items: center;
-    font-family: var(--ff-body);
-    font-weight: var(--fw-regular);
-    font-size: var(--fs-400);
-    line-height: 1.7;
-    color: var(--clr-ink);
-}
-
-.list-icon {
-    height: 1.8rem;
-    filter: invert(90%) sepia(100%) saturate(2%) hue-rotate(319deg) brightness(107%) contrast(100%);
-}
-
-.second-list-item button {
-    border: 0;
-    background-color: var(--clr-yellow);
-    font-family: var(--ff-heading);
-    font-weight: var(--fw-light);
-    font-size: var(--fs-400);
-    line-height: 1.43;
-    color: var(--clr-ink);
-    display: flex;
-    padding: 0.2rem 1rem 0.2rem 0.4rem;
-    align-items: center;
-    gap: 0.9rem;
-    cursor: pointer;
-}
-
-.second-list-item::before {
-    content: "";
-    display: inline-block;
-    flex-shrink: 0;
-    height: 1.6rem;
-    width: 1.6rem;
-    background-size: contain;
-    background-repeat: no-repeat;
-    margin-inline: 0.2rem 1.2rem;
-    opacity: 0.3;
-}
-
-.second-list-item:nth-of-type(1)::before {
+.image-icon::before {
     background-image: url("../img/icon/Image.svg");
 }
-.second-list-item:nth-of-type(2)::before {
+.file-icon::before {
     background-image: url("../img/icon/File.svg");
 }
 
-.second-list-item:nth-of-type(3)::before {
-    background-image: url("../img/icon/Image.svg");
-}
-.second-list-item:nth-of-type(4)::before {
-    background-image: url("../img/icon/File.svg");
-}
-
-/* dritte sidebar liste */
-
-.third-list li + li {
-    margin-top: 1rem;
-}
-
-.third-list-item {
-    display: flex;
-    align-items: center;
-    font-family: var(--ff-body);
-    font-weight: var(--fw-regular);
-    font-size: var(--fs-400);
-    line-height: 1.7;
-    color: var(--clr-ink);
-}
-
-.third-list-item::before {
-    content: "";
-    display: inline-block;
-    flex-shrink: 0;
-    height: 1.6rem;
-    width: 1.6rem;
-    background-size: contain;
-    background-repeat: no-repeat;
-    margin-inline: 0.2rem 1.2rem;
-    opacity: 0.3;
-}
-
-.third-list-item:nth-of-type(1)::before {
+.extern-icon::before {
     background-image: url("../img/icon/Extern-Link.svg");
 }
-.third-list-item:nth-of-type(2)::before {
+.link-icon::before {
     background-image: url("../img/icon/Link.svg");
 }
-
-.third-list-item:nth-of-type(3)::before {
-    background-image: url("../img/icon/Extern-Link.svg");
-}
-
-/* footer styles */
-
-.footer {
-    background-color: var(--clr-ink);
-}
-
-.footer-top {
-    background-image: url("../img/photo/ACME_Background-Pattern.png");
-}
-
-.footer-bottom {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-block: 0.6rem;
-    color: var(--clr-white);
-
-    & div {
-        display: flex;
-        gap: 2rem;
-    }
-
-    & div + div {
-        gap: 0.5rem;
-    }
-
-    & img {
-        height: 1.5rem;
-        filter: invert(90%) sepia(82%) saturate(17%) hue-rotate(295deg) brightness(106%) contrast(100%);
-    }
-}
-
-.social-links a {
-    background-color: var(--clr-yellow);
-    padding: 0.3rem;
-}
-
-/* form styles */
-
-form {
-    padding-block: 4rem;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 3.5rem repeat(4, 2.25rem 2.75rem) 4rem;
-    column-gap: 1rem;
-
-    & h2 {
-        font-family: var(--ff-heading);
-        font-weight: var(--fw-semi-bold);
-        font-size: 1.75rem;
-        color: var(--clr-white);
-        grid-column: 1/7;
-    }
-
-    & label {
-        color: var(--clr-white);
-        align-self: center;
-        margin-top: 0.5rem;
-    }
-
-    & select {
-        appearance: none;
-        background-image: url("../img/icon/Arrowhead_Down.svg");
-        background-repeat: no-repeat;
-        background-position: right .7em top 50%, 0 0;
-        background-size: 1.5em auto, 100%;
-    }
-}
-
-.form-left {
-    grid-column: 1/4;
-    grid-row: 2/10;
-    display: grid;
-    grid-template-rows: subgrid;
-}
-
-.form-right {
-    grid-column: 4/7;
-    grid-row: 2/10;
-    display: grid;
-    grid-template-rows: subgrid;
-
-    & textarea {
-        grid-row: 2/10;
-        resize: none;
-    }
-}
-
-.form-bottom {
-    grid-column: 1/7;
-    grid-row: 10/10;
-    display: flex;
-    align-self: end;
-    align-items: center;
-
-    & label {
-        user-select: none;
-    }
-
-    & input[type=checkbox] { 
-        display: none; 
-    }
-
-    & input[type=checkbox] + label {
-      padding-left: 30px;
-      position: relative;
-    }
-    
-    & input[type=checkbox] + label::before {
-      display: block;
-      border: 2px solid var(--clr-white);
-      border-radius: 3px;
-      left: 3px;
-      top: 3px;
-      height: 14px;
-      width: 14px;
-      content: "";
-      position: absolute;
-      line-height: 14px;
-    }
-    
-    /* falls unchecked
-
-    & input[type=checkbox]:invalid + label::before {
-    }
-
-    */
-    
-    & input[type=checkbox]:checked + label::before {
-      content: "";
-      background-color: var(--clr-yellow);
-    }
-
-    & button {
-        margin-left: auto;
-        border: 0;
-        background-color: var(--clr-yellow);
-        font-family: var(--ff-heading);
-        font-weight: var(--fw-light);
-        font-size: var(--fs-400);
-        line-height: 1.43;
-        color: var(--clr-ink);
-        display: flex;
-        padding: 0.2rem 1rem 0.2rem 0.4rem;
-        align-items: center;
-        gap: 0.9rem;
-        cursor: pointer;
-    }
-}
-
-
-
