--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,147 @@
+/* font import */
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/montserrat/Montserrat-Regular.woff2') format('woff2'),
+      url('../fonts/montserrat/Montserrat-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../fonts/montserrat/Montserrat-Light.woff2') format('woff2'),
+      url('../fonts/montserrat/Montserrat-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Oswald';
+  src: url('../fonts/oswald/Oswald-SemiBold.woff2') format('woff2'),
+      url('../fonts/oswald/Oswald-SemiBold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Oswald';
+  src: url('../fonts/oswald/Oswald-Medium.woff2') format('woff2'),
+      url('../fonts/oswald/Oswald-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Oswald';
+  src: url('../fonts/oswald/Oswald-Regular.woff2') format('woff2'),
+      url('../fonts/oswald/Oswald-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Oswald';
+  src: url('../fonts/oswald/Oswald-Light.woff2') format('woff2'),
+      url('../fonts/oswald/Oswald-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* custom variables */
+
+:root {
+  --clr-black: #000000;
+  --clr-ink: #2c3331;
+  --clr-white: #ffffff;
+  --clr-green: #2c594e;
+  --clr-green-middle: #758981;
+  --clr-green-light: #edefee;
+  --clr-yellow: #efb139;
+
+  --ff-body: "Montserrat", sans-serif;
+  --ff-heading: "Oswald", sans-serif;
+
+  --fw-light: 300;
+  --fw-regular: 400;
+  --fw-medium: 500;
+  --fw-semi-bold: 600;
+
+  --fs-300: .75rem;
+  --fs-400: .875rem;
+  --fs-500: 1.25rem;
+  --fs-600: 1.5rem;
+  --fs-700: 4rem;
+}
+
+@media (width <= 375px) {
+  :root {
+      --fs-700: 2.5rem;
+  }
+}
+
+/* ================== font styles ==================== */
+
+body {
+  font-family: var(--ff-body);
+  font-weight: var(--fw-regular);
+  font-size: var(--fs-400);
+  line-height: 1.7;
+  color: var(--clr-ink);
+}
+
+.h1-font {
+  font-family: var(--ff-heading);
+  font-size: var(--fs-700);
+  font-weight: var(--fw-medium);
+  line-height: 1.4;
+  color: var(--clr-yellow)
+}
+
+.h2-font {
+  font-family: var(--ff-heading);
+  font-weight: var(--fw-semi-bold);
+  line-height: 1.4;
+  font-size: var(--fs-600);
+  color: var(--clr-green);
+}
+
+.h3-font {
+  font-family: var(--ff-body);
+  font-weight: var(--fw-regular);
+  font-size: var(--fs-500);
+  line-height: 1.4;
+  color: var(--clr-green);
+}
+
+.nav-font {
+  font-family: var(--ff-heading);
+  font-weight: var(--fw-medium);
+  font-size: var(--fs-600);
+  line-height: 1.5;
+}
+
+.crumbs-font {
+  font-family: var(--ff-heading);
+  font-weight: var(--fw-regular);
+  font-size: var(--fs-300);
+  line-height: 2;
+}
+
+.info-font {
+  font-family: var(--ff-heading);
+  font-weight: var(--fw-light);
+  font-size: var(--fs-400);
+  line-height: 1.43;
+  color: var(--clr-ink);
+}
+
 /* Remove Default Styles */
 
 *,
