add media queries

--- a/css/global.css
+++ b/css/global.css
@@ -77,14 +77,14 @@
   --fs-400: .875rem;
   --fs-500: 1.25rem;
   --fs-600: 1.5rem;
-  --fs-700: 4rem;
+  --fs-700: 3.25rem;
 }
 
-@media (width <= 375px) {
+/* @media (width > px) {
   :root {
-      --fs-700: 2.5rem;
+    --fs-700: 4rem;
   }
-}
+} */
 
 /* ================== font styles ==================== */
 
@@ -123,7 +123,7 @@ body {
 .nav-font {
   font-family: var(--ff-heading);
   font-weight: var(--fw-medium);
-  font-size: var(--fs-600);
+  font-size: 1.35rem;
   line-height: 1.5;
 }
 
@@ -192,16 +192,22 @@ a {
 /* position classes */
 
 .global-width {
-  width: min(1202px, 100% - 1rem);
+  width: min(1202px, 100% - 2rem);
   margin-inline: auto;
 }
 
 /* utility classes for flex and grid */
 
-.grid-col {
+/* .grid-col {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   column-gap: 1rem;
+} */
+
+@media (orientation: landscape) {
+  :root {
+    --fs-700: 4rem;
+  }
 }
 
 .grid-row {
