--- a/css/footer.css
+++ b/css/footer.css
@@ -2,38 +2,41 @@ footer {
     background-color: var(--clr-ink);
 }
 
-.footer-form {
+.contact-container {
     background-image: url("../img/photo/ACME_Background-Pattern.png");
+    position: relative;
 }
 
 .form {
-    padding-block: 4rem;
+    padding-block: 2rem 3rem;
     color: var(--clr-white);
 
     & h2 {
-        color: var(--clr-white);
+        color: inherit;
         font-size: 1.75rem;
-        grid-column: 1/7;
     }
 
     & label {
-        align-self: center;
         margin-top: 0.5rem;
-    }
-
-    & input {
-        padding-left: 0.5rem;
     }
 }
 
 .form__input {
-    grid-column: 1/4;
-    grid-row: 2/10;
-    display: grid;
-    grid-template-rows: subgrid;
+    display: flex;
+    flex-direction: column;
+
+    & input {
+        height: 2.5rem;
+        padding-left: 0.5rem;
+        border-radius: 0;
+        border: 0;
+    }
 
     & select {
+        height: 2.5rem;
         appearance: none;
+        border-radius: 0;
+        border: 0;
         background-image: url("../img/icon/Arrowhead_Down.svg");
         background-repeat: no-repeat;
         background-position: right .7em top 50%, 0 0;
@@ -42,33 +45,29 @@ footer {
 }
 
 .form__text {
-    grid-column: 4/7;
-    grid-row: 2/10;
-    display: grid;
-    grid-template-rows: subgrid;
+    display: flex;
+    flex-direction: column;
 
     & textarea {
-        grid-row: 2/10;
         padding: 0.5rem;
         resize: none;
     }
 }
 
 .form__send {
-    grid-column: 1/7;
-    grid-row: 10/10;
     padding-top: 1rem;
 
     & label {
         user-select: none;
+        display: block;
+        margin-left: 1.8rem;
     }
 
     & input[type=checkbox] { 
-        display: none; 
+        opacity: 0;
     }
 
     & input[type=checkbox] + label {
-      padding-left: 1.8rem;
       position: relative;
     }
     
@@ -76,8 +75,8 @@ footer {
       display: block;
       border: 2px solid var(--clr-white);
       border-radius: 3px;
-      left: 3px;
-      top: 3px;
+      top: 0.25rem;
+      left: -1.8rem;
       height: 0.9rem;
       width: 0.9rem;
       content: "";
@@ -94,9 +93,31 @@ footer {
     }
 }
 
-.footer-credentials {
-    padding-block: 0.6rem;
+.credentials {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 0.5rem;;
+    padding-block: 1rem 0.6rem;
     color: var(--clr-white);
+
+    & div {
+        display: flex;
+        align-items: center;
+    }
+}
+
+.credentials__legal {
+    gap: 1rem;
+}
+
+.credentials__social {
+    margin-left: auto;
+    gap: 0.25rem;
+
+    & a {
+        background-color: var(--clr-yellow);
+        padding: 0.3rem;
+    }
 
     & img {
         height: 1.5rem;
@@ -104,15 +125,113 @@ footer {
     }
 }
 
-.legal-link + .legal-link {
-    margin-left: 2rem;
+.credentials__copy {
+    width: 100%;
+    justify-content: center;
 }
 
-.social-link {
+/* #dialog {
+    top: 0;
+    left: 0;
+    width: 100dvw;
+    height: 100dvh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
     background-color: var(--clr-yellow);
-    padding: 0.3rem;
-}
+    z-index: 1;
+    opacity: 1;
+    transition: opacity 2s;
+} */
 
-.social-link + .social-link {
-    margin-left: 0.25rem;
+@media (orientation: landscape) {
+
+    .form {
+        display: grid;
+        grid-template-rows: 3.5rem repeat(4, 2.25rem 2.75rem) 4rem;
+        grid-template-columns: repeat(6, 1fr);
+        column-gap: 1rem;
+        padding-block: 4rem;
+
+        & h2 {
+            grid-column: 1/7;
+        }
+    
+        & label {
+            align-self: center;
+        }
+    }
+
+    .form__input {
+        display: grid;
+        grid-column: 1/4;
+        grid-row: 2/10;
+        grid-template-rows: subgrid;
+    
+        & input {
+            height: auto;
+        }
+    
+        & select {
+            height: auto;
+        }
+    }
+    
+    .form__text {
+        display: grid;
+        grid-column: 4/7;
+        grid-row: 2/10;
+        grid-template-rows: subgrid;
+    
+        & textarea {
+            grid-row: 2/10;
+        }
+    }
+    
+    .form__send {
+        display: flex;
+        align-items: center;
+        grid-column: 1/7;
+        grid-row: 10/10;
+
+        & label {
+            margin-left: 1rem;
+        }
+    }
+
+    .credentials {
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        padding-block: 0.5rem;
+
+        & div {
+            display: flex;
+            align-items: center;
+        }
+    }
+
+    .credentials__legal {
+        gap: 2rem;
+    }
+
+    .credentials__social {
+        margin-left: 0;
+        gap: 0.25rem;
+
+        & a {
+            background-color: var(--clr-yellow);
+            padding: 0.3rem;
+        }
+
+        & img {
+            height: 1.5rem;
+            filter: invert(90%) sepia(82%) saturate(17%) hue-rotate(295deg) brightness(106%) contrast(100%);
+        }
+    }
+
+    .credentials__copy {
+        width: auto;
+        justify-content: center;
+    }
 }
