--- a/css/index.css
+++ b/css/index.css
@@ -4,44 +4,47 @@
 @import url("footer.css");
 
 main {
-    padding-block: 4rem;
+    padding-block: 3rem;
 }
+/* 
+.main-container {
+    display: flex;
+    flex-direction: column;
+} */
 
 /* styles for article styles for article styles for article styles for article */
 /* styles for article styles for article styles for article styles for article */
 
-article {
-    grid-column: 1/5;
+.article {
+    margin-bottom: 5rem;
 
     & time {
         display: block;
-        margin-bottom: 0.3rem;
+        margin-bottom: 0.4rem;
     }
 
     & h2 {
-        margin-bottom: 0.8rem;
+        margin-bottom: 1rem;
     }
 
     & h3 {
-        margin-block: 2.5rem 0.3rem;
+        margin-block: 2.5rem 0.5rem;
     }
 
     & h4 {
-        margin-block: 1.5rem 0.8rem;
+        margin-block: 1.5rem 1.5rem;
     }
 
     & p + p {
-        margin-top: 1rem;
+        margin-top: 1.5rem;
     }
 }
 
-.full-width-photo {
-    grid-column: 1/7;
+.cover-photo {
     width: 100%;
     aspect-ratio: 16/5;
     object-fit: cover;
-    object-position: 50% 42%;
-    margin-bottom: 4rem;
+    margin-bottom: 0.5rem;
 }
 
 /* list im text styles list im text styles list im text styles list im text styles */
@@ -57,7 +60,7 @@ article {
 
     & img {
         height: 1.15rem;
-        margin-right: 1rem;
+        margin-right: 1.5rem;
     }
 }
 
@@ -65,12 +68,27 @@ article {
 /* slider styles slider styles slider styles slider styles slider styles */
 
 .slideshow {
-    position: relative;
+    width: 100dvw;
+    margin-left: -1rem;
     margin-block: 3rem;
     border-bottom: solid 4px var(--clr-yellow);
 
-    & figcaption {
+    .slideshow__caption {
         margin-block: 0.7rem;
+        margin-left: 1rem;
+    }
+}
+
+@media (orientation: landscape) {
+    .slideshow {
+        position: relative;
+        width: auto;
+        margin-left: 0;
+
+        .slideshow__caption {
+            margin-block: 0.7rem;
+            margin-left: unset;
+        }
     }
 }
 
@@ -83,24 +101,33 @@ article {
 }
 
 .slideshow__buttons {
-    position: absolute;
-    right: 0;
-    bottom: 0;
+    display: none;
+}
 
-    & button {
-        border: 0;
-        padding: 1rem;
-        background-color: var(--clr-yellow);
-        cursor: pointer;
+@media (orientation: landscape) {
 
-        & img {
-            height: 2.2rem;
-            filter: invert(90%) sepia(100%) saturate(2%) hue-rotate(319deg) brightness(107%) contrast(100%);
+    .slideshow__buttons {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        right: 0;
+        bottom: 0;
+    
+        & button {
+            border: 0;
+            padding: 1rem;
+            background-color: var(--clr-yellow);
+            cursor: pointer;
+    
+            & img {
+                height: 2.2rem;
+                filter: invert(90%) sepia(100%) saturate(2%) hue-rotate(319deg) brightness(107%) contrast(100%);
+            }
         }
-    }
-
-    & button + button {
-        margin-top: 0.25rem;
+    
+        & button + button {
+            margin-top: 0.25rem;
+        }
     }
 }
 
@@ -109,14 +136,14 @@ article {
 
 .quote {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    column-gap: 1rem;
-    margin-block: 3rem;
-    background: linear-gradient(to right, var(--clr-green-light) calc((100% - 16px) / 2), transparent 0);
+    grid-template-columns: repeat(6, 1fr);
+    column-gap: 0.3125rem;
+    margin-block: 2rem;
+    background: linear-gradient(to right, var(--clr-green-light) calc((100% - 0.3125rem) / 2), transparent 0);
 }
 
 .quote__inner-container {
-    grid-column: 2/5;
+    grid-column: 2/7;
 
     & cite {
         align-self: flex-end;
@@ -126,18 +153,30 @@ article {
         font-size: var(--fs-500);
         line-height: 1.4;
         margin-block: 2rem 0.8rem;
+    }   
+}
+
+@media (orientation: landscape) {
+    .quote {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        column-gap: 1rem;
+        margin-block: 3rem;
+        background: linear-gradient(to right, var(--clr-green-light) calc((100% - 1rem) / 2), transparent 0);
     }
     
+    .quote__inner-container {
+        grid-column: 2/5; 
+    }
 }
+
 
 /* sidebar styles */
 
 aside {
-    grid-column: 5/7;
-
-    & div:nth-of-type(2) {
-        margin-block: 3rem;
-    }
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
 }
 
 .card-header {
@@ -173,8 +212,6 @@ aside {
         color: var(--clr-ink);
     }
 }
-
-/* erste sidebar liste */
 
 .card__list {
     & li + li {
@@ -213,4 +250,31 @@ aside {
 }
 .link-icon::before {
     background-image: url("../img/icon/Link.svg");
+}
+
+@media (orientation: landscape) {
+    main {
+        padding-block: 4rem;
+    }
+
+    .main-container {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        column-gap: 1rem;
+    }
+
+    .cover-photo {
+        grid-column: 1/7;
+        margin-bottom: 4rem;
+        object-position: 50% 42%;
+    }
+
+    .article {
+        grid-column: 1/5;
+        margin-bottom: 0;
+    }
+
+    aside {
+        grid-column: 5/7;
+    }
 }
