renamed slider classes

--- a/css/index.css
+++ b/css/index.css
@@ -92,30 +92,6 @@ main {
     }
 }
 
-/* .test {
-    width: 100%;
-    aspect-ratio: 16 / 5;
-} */
-
-.keen-slider {
-    /* width: 100%;
-    height: 100%; */
-    width: 100%;
-    aspect-ratio: 16 / 5;
-}
-
-.number-slide {
-  display: flex;
-}
-
-@media (orientation: landscape) {
-    /* .keen-slider {
-    } */
-
-    /* .slide {
-    } */
-}
-
 .slideshow__buttons {
     display: none;
 }
@@ -146,6 +122,16 @@ main {
         }
     }
 }
+
+.keen-slider {
+    width: 100%;
+    aspect-ratio: 16 / 5;
+}
+
+.keen-slider__slide {
+  display: flex;
+}
+
 
 /* zitat styles zitat styles zitat styles zitat styles zitat styles */
 /* zitat styles zitat styles zitat styles zitat styles zitat styles */
