--- a/css/global.css
+++ b/css/global.css
@@ -204,7 +204,7 @@ a {
   column-gap: 1rem;
 } */
 
-@media (orientation: landscape) {
+@media (width >= 50em) {
   :root {
     --fs-700: 4rem;
   }
@@ -247,11 +247,6 @@ a {
   background-color: var(--clr-yellow);
   padding: 0.6rem 1rem 0.6rem 0.4rem;
   cursor: pointer;
-
-  /* & img {
-      height: 1.6rem;
-      filter: invert(90%) sepia(100%) saturate(2%) hue-rotate(319deg) brightness(107%) contrast(100%);
-  } */
 
   & div {
     display: inline-block;
