--- a/css/global.css
+++ b/css/global.css
@@ -80,11 +80,11 @@
   --fs-700: 3.25rem;
 }
 
-/* @media (width > px) {
+@media (width >= 50em) {
   :root {
     --fs-700: 4rem;
   }
-} */
+}
 
 /* ================== font styles ==================== */
 
@@ -172,6 +172,10 @@ ol {
 
 /* Make images easier to work with */
 
+img {
+  font-style: italic;
+}
+
 img,
 svg {
   max-width: 100%;
@@ -194,48 +198,6 @@ a {
 .global-width {
   width: min(1202px, 100% - 2rem);
   margin-inline: auto;
-}
-
-/* utility classes for flex and grid */
-
-/* .grid-col {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  column-gap: 1rem;
-} */
-
-@media (width >= 50em) {
-  :root {
-    --fs-700: 4rem;
-  }
-}
-
-.grid-row {
-  grid-template-rows: 3.5rem repeat(4, 2.25rem 2.75rem) 4rem;
-}
-
-.flex {
-  display: flex;
-}
-
-.flex-center {
-  display: flex;
-  align-items: center;
-}
-
-.flex-end {
-  display: flex;
-  align-items: end;
-}
-
-.flex-between {
-  display: flex;
-  justify-content: space-between;
-}
-
-.flex-col {
-  display: flex;
-  flex-direction: column;
 }
 
 /* button classes */
