--- a/css/global.css
+++ b/css/global.css
@@ -228,7 +228,6 @@ a {
       width: 1.8rem;
       background-size: contain;
       background-repeat: no-repeat;
-      background-image: url("../img/icon/Download.svg");
-      filter: invert(90%) sepia(100%) saturate(2%) hue-rotate(319deg) brightness(107%) contrast(100%);
+      background-image: url('data:image/svg+xml;utf8,<svg version="1.1" id="_x30_1_x5F_Contact-Female" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 24 24"> <path fill="%23ffffff" d="M20,17v2c0,0.6-0.4,1-1,1H5c-0.6,0-1-0.4-1-1v-2c0-0.6,0.4-1,1-1s1,0.4,1,1v1h12v-1c0-0.6,0.4-1,1-1 S20,16.4,20,17z M16.8,10.4c-0.3-0.4-1-0.5-1.4-0.2L13,12c0,0,0,0,0,0V4c0-0.6-0.4-1-1-1s-1,0.4-1,1v8c0,0,0,0,0,0.1l-2.4-1.7 c0,0,0,0,0,0c-0.5-0.3-1.1-0.2-1.4,0.2C6.9,11.1,7,11.7,7.4,12l4,2.8c0.2,0.1,0.4,0.2,0.6,0.2c0.2,0,0.4-0.1,0.6-0.2l4-3 C17,11.5,17.1,10.8,16.8,10.4z"/> </svg>');
   }
 }
