Font weights austauschen

--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 .header-navigation {
-    padding-block: 1rem;
     display: flex;
     justify-content: space-between;
+    padding-block: 1rem;
 }
 
 .header-title {
@@ -18,47 +18,48 @@
 }
 
 .logo {
-    height: 2.25rem;
+    height: 2.25em;
 }
 
 @media (width >= 50em) {
     .header-navigation {
-        padding-block: 1rem;
         display: flex;
         justify-content: space-between;
+        padding-block: 1rem;
     }
 
     .logo {
-        height: 4rem;
+        height: 4em;
     }
 }
 
 .navbar {
     display: none;
-    position: absolute;
-    inset: 0;
-    background-color: var(--clr-yellow);
     align-items: center;
-    padding-left: 1rem;
+    position: fixed;
+    inset: 0;
+    z-index: 1;
+    padding-left: 1em;
+    background-color: var(--clr-yellow);
 
     & > ul {
         display: flex;
-        gap: 1rem;
         flex-direction: column;
+        gap: 1em;
     }
 }
 
 .navbar-item {
-    position: relative;
     display: inline-block;
+    position: relative;
 
     .dropdown-button {
-        color: var(--clr-white);
         position: relative;
-        background-color: transparent;
+        padding-inline: 2em;
         border: 0;
+        background-color: transparent;
+        color: var(--clr-white);
         cursor: pointer;
-        padding-inline: 2rem;
     }
 
     .dropdown-container {
@@ -67,9 +68,10 @@
         & ul {
             display: flex;
             flex-direction: column;
-            gap: 0.2rem;
+            gap: 0.2em;
+            margin-block: 1.2rem 0.4rem;
+            margin-left: 4rem;
             background-color: var(--clr-yellow);
-            margin: 1.2rem 0rem 0.4rem 4rem;
             white-space: nowrap;
         }
 
@@ -80,18 +82,19 @@
     }
 }
 
-.burger-button {
-    display: flex;
+.menu-button {
+    position: fixed;
+    right: 1em;
     align-items: flex-end;
+    z-index: 2;
 
     & button {
         border: none;
-        padding: 0.3rem;
+        padding: 0.3em;
         background-color: var(--clr-yellow);
 
-        & img {
-            height: 1.75rem;
-            filter: invert(90%) sepia(82%) saturate(17%) hue-rotate(295deg) brightness(106%) contrast(100%);
+        & svg {
+            height: 1.75em;
         }
     }
 }
@@ -115,9 +118,9 @@
         display: flex;
         align-items: flex-end;
         position: unset;
-        background-color: transparent;
-        padding-left: 0;
         inset: unset;
+        padding-left: 0;
+        background-color: transparent;
 
         & > ul {
             display: flex;
@@ -127,8 +130,8 @@
     }
 
     .navbar-item {
-        position: relative;
         display: inline-block;
+        position: relative;
 
         &:hover {
             .dropdown-button {color: var(--clr-green);}
@@ -136,26 +139,26 @@
         }
 
         .dropdown-button {
-            color: unset;
             position: relative;
-            background-color: transparent;
+            padding-inline: clamp(1.3rem, -2.4333rem + 7.4667vw, 2rem);
             border: 0;
+            background-color: transparent;
+            color: unset;
             cursor: pointer;
-            padding-inline: 2rem;
         }
 
         .dropdown-container {
-            position: absolute;
             display: none;
+            position: absolute;
             padding-top: calc(1rem - 0.25rem);
     
             & ul {
                 display: flex;
                 flex-direction: column;
                 gap: 0.2rem;
-                background-color: var(--clr-yellow);
                 margin: unset;
                 padding: 2rem;
+                background-color: var(--clr-yellow);
                 white-space: nowrap;
             }
 
@@ -167,7 +170,7 @@
         }
     }
 
-    .burger-button {
+    .menu-button {
         display: none;
     }
 
@@ -177,21 +180,18 @@
         }
 
         &.navbar-item::before {
-            position: absolute;
-            border-bottom: solid 0.25rem var(--clr-yellow);
             content: "";
+            position: absolute;
             width: 100%;
             height: calc((1.35rem * 1.5) + 1rem);
+            border-bottom: solid 0.25rem var(--clr-yellow);
         }
     }
 }
 
-/* breadcrumb styles breadcrumb styles breadcrumb styles breadcrumb styles */
-/* breadcrumb styles breadcrumb styles breadcrumb styles breadcrumb styles */
-
 .header-breadcrumbs {
-    background-color: var(--clr-yellow);
     padding-block: 0.25rem;
+    background-color: var(--clr-yellow);
 
     & div {
         display: flex;
@@ -199,7 +199,7 @@
 
     }
 
-    & img {
+    & svg {
         height: var(--fs-300);
         margin-inline: 1rem;
     }
