--- a/css/footer.css
+++ b/css/footer.css
@@ -3,22 +3,22 @@ footer {
 }
 
 .contact-container {
-    background-image: url("../img/photo/ACME_Background-Pattern.png");
     position: relative;
+    background-image: url("../img/photo/ACME_Background-Pattern.png");
 }
 
 .form {
-    padding-block: 2rem 3rem;
+    padding-block: 2em 3em;
     color: var(--clr-white);
 
     & h2 {
         color: inherit;
         font-size: 1.75rem;
-        line-height: 2.5;
+        line-height: 2;
     }
 
     & label {
-        margin-top: 0.5rem;
+        margin-top: 0.5em;
     }
 }
 
@@ -27,20 +27,20 @@ footer {
     flex-direction: column;
 
     & input {
-        height: 2.5rem;
-        padding-left: 0.5rem;
-        border-radius: 0;
+        height: 2.5em;
+        padding-left: 0.5em;
         border: 0;
+        border-radius: 0;
     }
 
     & select {
-        height: 2.5rem;
         appearance: none;
-        border-radius: 0;
+        height: 2.5em;
         border: 0;
+        border-radius: 0;
         background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 24 24"><path fill="%232c3331" d="M11.4,15.8c0.2,0.1,0.4,0.2,0.6,0.2c0.2,0,0.4,0,0.6-0.2l6-4.8c0,0,0,0,0.1,0c0.4-0.4,0.4-1,0.1-1.4c0,0,0,0,0,0c-0.3-0.4-1-0.5-1.4-0.1L12,13.7L6.6,9.2C6.2,8.9,5.6,8.9,5.2,9.4s-0.3,1.1,0.1,1.4L11.4,15.8z"/></svg>');
         background-repeat: no-repeat;
-        background-position: right .7em top 50%, 0 0;
+        background-position: right 0.7em top 50%, 0 0;
         background-size: 1.5em auto, 100%;
     }
 }
@@ -50,18 +50,16 @@ footer {
     flex-direction: column;
 
     & textarea {
-        padding: 0.5rem;
+        padding: 0.5em;
         resize: none;
     }
 }
 
 .form__send {
-    padding-top: 1rem;
-
     & label {
-        user-select: none;
         display: block;
-        margin-left: 1.8rem;
+        margin-left: 1.8em;
+        user-select: none;
     }
 
     & input[type=checkbox] { 
@@ -69,28 +67,29 @@ footer {
     }
 
     & input[type=checkbox] + label {
-      position: relative;
+        position: relative;
     }
     
     & input[type=checkbox] + label::before {
-      display: block;
-      border: 2px solid var(--clr-white);
-      border-radius: 3px;
-      top: 0.25rem;
-      left: -1.8rem;
-      height: 0.9rem;
-      width: 0.9rem;
-      content: "";
-      position: absolute;
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0.25em;
+        left: -1.8em;
+        width: 0.9em;
+        height: 0.9em;
+        border: 2px solid var(--clr-white);
+        border-radius: 3px;
     }
     
     & input[type=checkbox]:checked + label::before {
-      content: "";
-      background-color: var(--clr-yellow);
+        content: "";
+        background-color: var(--clr-yellow);
     }
 
     & button {
         margin-left: auto;
+        margin-top: 1em;
 
         & div::before {
             background-image: url('data:image/svg+xml;utf8,<svg version="1.1" id="_x30_1_x5F_Contact-Female" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 24 24"> <path fill="%23ffffff" d="M5,13h11.9l-3.6,4.4c-0.4,0.4-0.3,1.1,0.1,1.4c0.4,0.4,1.1,0.3,1.4-0.1l5-6c0,0,0.1-0.1,0.1-0.2 c0,0,0-0.1,0.1-0.1c0-0.1,0.1-0.2,0.1-0.4c0-0.1,0-0.2-0.1-0.4c0-0.1,0-0.1-0.1-0.1c0-0.1-0.1-0.1-0.1-0.2l-5-6 C14.6,5.1,14.3,5,14,5c-0.2,0-0.5,0.1-0.6,0.2c-0.4,0.4-0.5,1-0.1,1.4c0,0,0,0,0,0l3.6,4.4H5c-0.6,0-1,0.4-1,1C4,12.6,4.4,13,5,13z" /> </svg>');
@@ -101,8 +100,8 @@ footer {
 .credentials {
     display: flex;
     flex-wrap: wrap;
-    row-gap: 0.5rem;;
-    padding-block: 1rem 0.6rem;
+    row-gap: 0.5em;;
+    padding-block: 1em 0.6em;
     color: var(--clr-white);
 
     & div {
@@ -112,52 +111,36 @@ footer {
 }
 
 .credentials__legal {
-    gap: 1rem;
+    gap: 1em;
 }
 
 .credentials__social {
     margin-left: auto;
-    gap: 0.25rem;
+    gap: 0.25em;
 
     & a {
+        padding: 0.3em;
         background-color: var(--clr-yellow);
-        padding: 0.3rem;
     }
 
-    & img {
-        height: 1.5rem;
-        filter: invert(90%) sepia(82%) saturate(17%) hue-rotate(295deg) brightness(106%) contrast(100%);
+    & svg {
+        height: 1.5em;
     }
 }
 
 .credentials__copy {
+    justify-content: center;
     width: 100%;
-    justify-content: center;
 }
-
-/* #dialog {
-    top: 0;
-    left: 0;
-    width: 100dvw;
-    height: 100dvh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    background-color: var(--clr-yellow);
-    z-index: 1;
-    opacity: 1;
-    transition: opacity 2s;
-} */
 
 @media (width >= 50em) {
 
     .form {
         display: grid;
-        grid-template-rows: 3.5rem repeat(4, 2.25rem 2.75rem) 4rem;
         grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: 3.5rem repeat(4, 2.25rem 2.75rem) 4rem;
         column-gap: 1rem;
-        padding-block: 4rem;
+        padding-block: 4em;
 
         & h2 {
             grid-column: 1/7;
@@ -199,16 +182,17 @@ footer {
         align-items: center;
         grid-column: 1/7;
         grid-row: 10/10;
+        margin-top: 1em;
 
         & label {
-            margin-left: 1rem;
+            margin-left: 1em;
         }
     }
 
     .credentials {
-        flex-wrap: nowrap;
         justify-content: space-between;
-        padding-block: 0.5rem;
+        flex-wrap: nowrap;
+        padding-block: 0.5em;
 
         & div {
             display: flex;
@@ -217,26 +201,25 @@ footer {
     }
 
     .credentials__legal {
-        gap: 2rem;
+        gap: 2em;
     }
 
     .credentials__social {
+        gap: 0.25em;
         margin-left: 0;
-        gap: 0.25rem;
 
         & a {
+            padding: 0.3em;
             background-color: var(--clr-yellow);
-            padding: 0.3rem;
         }
 
-        & img {
-            height: 1.5rem;
-            filter: invert(90%) sepia(82%) saturate(17%) hue-rotate(295deg) brightness(106%) contrast(100%);
+        & svg {
+            height: 1.5em;
         }
     }
 
     .credentials__copy {
-        width: auto;
         justify-content: center;
+        width: auto;
     }
 }
