--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,3 @@
-/* font import */
-
 @font-face {
   font-family: 'Montserrat';
   src: url('../fonts/montserrat/Montserrat-Regular.woff2') format('woff2'),
@@ -11,9 +9,9 @@
 
 @font-face {
   font-family: 'Montserrat';
-  src: url('../fonts/montserrat/Montserrat-Light.woff2') format('woff2'),
-      url('../fonts/montserrat/Montserrat-Light.woff') format('woff');
-  font-weight: 300;
+  src: url('../fonts/montserrat/Montserrat-Medium.woff2') format('woff2'),
+      url('../fonts/montserrat/Montserrat-Medium.woff2') format('woff');
+  font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
@@ -29,15 +27,6 @@
 
 @font-face {
   font-family: 'Oswald';
-  src: url('../fonts/oswald/Oswald-Medium.woff2') format('woff2'),
-      url('../fonts/oswald/Oswald-Medium.woff') format('woff');
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Oswald';
   src: url('../fonts/oswald/Oswald-Regular.woff2') format('woff2'),
       url('../fonts/oswald/Oswald-Regular.woff') format('woff');
   font-weight: 400;
@@ -47,14 +36,13 @@
 
 @font-face {
   font-family: 'Oswald';
-  src: url('../fonts/oswald/Oswald-Light.woff2') format('woff2'),
-      url('../fonts/oswald/Oswald-Light.woff') format('woff');
-  font-weight: 300;
+  src: url('../fonts/oswald/Oswald-Medium.woff2') format('woff2'),
+      url('../fonts/oswald/Oswald-Medium.woff') format('woff');
+  font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 
-/* custom variables */
 
 :root {
   --clr-black: #000000;
@@ -68,7 +56,6 @@
   --ff-body: "Montserrat", sans-serif;
   --ff-heading: "Oswald", sans-serif;
 
-  --fw-light: 300;
   --fw-regular: 400;
   --fw-medium: 500;
   --fw-semi-bold: 600;
@@ -86,11 +73,9 @@
   }
 }
 
-/* ================== font styles ==================== */
-
 body {
   font-family: var(--ff-body);
-  font-weight: var(--fw-regular);
+  font-weight: var(--fw-medium);
   font-size: var(--fs-400);
   line-height: 1.7;
   color: var(--clr-ink);
@@ -114,7 +99,7 @@ body {
 
 .h3-font {
   font-family: var(--ff-body);
-  font-weight: var(--fw-regular);
+  font-weight: var(--fw-medium);
   font-size: var(--fs-500);
   line-height: 1.4;
   color: var(--clr-green);
@@ -123,26 +108,30 @@ body {
 .nav-font {
   font-family: var(--ff-heading);
   font-weight: var(--fw-medium);
-  font-size: 1.35rem;
+  font-size: 1.5rem;
   line-height: 1.5;
+}
+
+@media (width >= 50em) {
+  .nav-font {
+    font-size: clamp(1.2rem, 0.4000rem + 1.6000vw, 1.35rem);
+  }
 }
 
 .crumbs-font {
   font-family: var(--ff-heading);
-  font-weight: var(--fw-regular);
+  font-weight: var(--fw-medium);
   font-size: var(--fs-300);
   line-height: 2;
 }
 
 .info-font {
   font-family: var(--ff-heading);
-  font-weight: var(--fw-light);
+  font-weight: var(--fw-regular);
   font-size: var(--fs-400);
   line-height: 1.43;
   color: var(--clr-ink);
 }
-
-/* Remove Default Styles */
 
 *,
 *::before,
@@ -170,22 +159,19 @@ ol {
   list-style: none;
 }
 
-/* Make images easier to work with */
-
 img {
   font-style: italic;
 }
 
 img,
 svg {
-  max-width: 100%;
   display: block;
+  max-width: 100%;
 }
-
-/* link styles */
 
 a {
   color: var(--clr-yellow);
+  font-weight: var(--fw-medium);
 }
 
 .no-deco {
@@ -193,21 +179,18 @@ a {
   text-decoration: none;
 }
 
-/* position classes */
-
 .global-width {
   width: min(1202px, 100% - 2rem);
   margin-inline: auto;
 }
 
-/* button classes */
-
 .dl-button {
   display: flex;
   align-items: center;
+  padding-inline: 0.4em 1em;
+  padding-block: 0.6em;
   border: 0;
   background-color: var(--clr-yellow);
-  padding: 0.6rem 1rem 0.6rem 0.4rem;
   cursor: pointer;
 
   & div {
@@ -219,13 +202,13 @@ a {
 
   & div::before {
       content: "";
-      position: absolute;
       display: inline-block;
       align-items: center;
-      margin-left: -2.5rem;
-      margin-top: -0.2rem;
-      height: 1.8rem;
-      width: 1.8rem;
+      position: absolute;
+      height: 1.8em;
+      width: 1.8em;
+      margin-left: -2.5em;
+      margin-top: -0.2em;
       background-size: contain;
       background-repeat: no-repeat;
       background-image: url('data:image/svg+xml;utf8,<svg version="1.1" id="_x30_1_x5F_Contact-Female" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 24 24"> <path fill="%23ffffff" d="M20,17v2c0,0.6-0.4,1-1,1H5c-0.6,0-1-0.4-1-1v-2c0-0.6,0.4-1,1-1s1,0.4,1,1v1h12v-1c0-0.6,0.4-1,1-1 S20,16.4,20,17z M16.8,10.4c-0.3-0.4-1-0.5-1.4-0.2L13,12c0,0,0,0,0,0V4c0-0.6-0.4-1-1-1s-1,0.4-1,1v8c0,0,0,0,0,0.1l-2.4-1.7 c0,0,0,0,0,0c-0.5-0.3-1.1-0.2-1.4,0.2C6.9,11.1,7,11.7,7.4,12l4,2.8c0.2,0.1,0.4,0.2,0.6,0.2c0.2,0,0.4-0.1,0.6-0.2l4-3 C17,11.5,17.1,10.8,16.8,10.4z"/> </svg>');
