--- a/css/index.css
+++ b/css/index.css
@@ -9,10 +9,6 @@ main {
     padding-block: 3rem;
 }
 
-/* .main-container {
-
-} */
-
 @media (width >= 50em) {
     main {
         display: grid;
@@ -20,37 +16,32 @@ main {
         column-gap: 1rem;
         padding-block: 3.5rem 5.5rem;
     }
-
-    /* .main-container {
-
-    } */
 }
-
-/* styles for article styles for article styles for article styles for article */
-/* styles for article styles for article styles for article styles for article */
 
 .article {
     margin-bottom: 5rem;
 
     & time {
         display: block;
-        margin-bottom: 0.4rem;
+        margin-bottom: 0.4em;
     }
 
     & h2 {
-        margin-bottom: 1rem;
+        margin-bottom: 1em;
     }
 
     & h3 {
-        margin-block: 2.5rem 0.5rem;
+        margin-block: 2.5em 0.5em;
     }
 
     & h4 {
-        margin-block: 1.5rem 1.5rem;
+        margin-block: 1.5em 1.5em;
+        font-weight: bold;
+
     }
 
     & p + p {
-        margin-top: 1.5rem;
+        margin-top: 1.5em;
     }
 }
 
@@ -64,60 +55,52 @@ main {
 .cover-photo {
     width: 100%;
     aspect-ratio: 16/5;
+    margin-bottom: 0.5em;
     object-fit: cover;
-    margin-bottom: 0.5rem;
 }
 
 @media (width >= 50em) {
     .cover-photo {
         grid-column: 1/7;
-        margin-bottom: 3rem;
+        margin-bottom: 3em;
     }
 }
 
-/* list im text styles list im text styles list im text styles list im text styles */
-/* list im text styles list im text styles list im text styles list im text styles */
-
-
 .bullet-points {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.5em;
 
     & li {
         display: flex;
-        margin-left: 2.8rem;
+        margin-left: 2.6em;
     }
 
     & li + li {
-        margin-top: 0.7rem; 
+        margin-top: 0.7em; 
     }
 
     & li::before {
-        position: absolute;
         content: "";
         display: inline-block;
         flex-shrink: 0;
-        height: 1.6rem;
-        width: 1.6rem;
+        position: absolute;
+        height: 1.6em;
+        width: 1.6em;
+        margin-left: -2.9em;
         background-size: contain;
         background-repeat: no-repeat;
-        margin-left: -2.8rem;
-        margin-top: -0.15rem;
         background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 24 24"><path fill="%232c594e" d="M12.2,17.4l4.5-5.4l-4.3-5.4c-0.1-0.2-0.2-0.4-0.2-0.6c0-0.6,0.5-1,1-1c0.3,0,0.6,0.1,0.8,0.4l4.8,6c0.3,0.4,0.3,0.9,0,1.3l-5,6c0,0,0,0,0,0c-0.4,0.4-1,0.5-1.4,0.1C11.9,18.4,11.9,17.8,12.2,17.4z M5.4,18.8c0.4,0.4,1.1,0.3,1.4-0.1l5-6c0.3-0.4,0.3-0.9,0-1.3l-4.8-6C6.7,5.1,6.5,5,6.2,5c-0.6,0-1,0.4-1,1c0,0.2,0.1,0.5,0.2,0.6L9.7,12l-4.5,5.4C4.9,17.8,4.9,18.4,5.4,18.8z"/></svg>');
     } 
 }
 
-/* slider styles slider styles slider styles slider styles slider styles */
-/* slider styles slider styles slider styles slider styles slider styles */
-
 .slideshow {
     width: 100vw;
     margin-left: -1rem;
-    margin-block: 3rem;
+    margin-block: 3em;
     border-bottom: solid 4px var(--clr-yellow);
 
     .slideshow__caption {
-        margin-block: 0.7rem;
-        margin-left: 1rem;
+        margin-block: 0.7em;
+        margin-left: 1em;
     }
 }
 
@@ -128,7 +111,7 @@ main {
         margin-left: 0;
 
         .slideshow__caption {
-            margin-block: 0.7rem;
+            margin-block: 0.7em;
             margin-left: unset;
         }
     }
@@ -139,50 +122,44 @@ main {
 }
 
 @media (width >= 50em) {
-
     .slideshow__buttons {
-        position: absolute;
         display: flex;
         flex-direction: column;
+        position: absolute;
         right: 0;
         bottom: 0;
     
         & button {
+            padding: 1em;
             border: 0;
-            padding: 1rem;
             background-color: var(--clr-yellow);
             cursor: pointer;
     
-            & img {
-                height: 2.2rem;
-                filter: invert(90%) sepia(100%) saturate(2%) hue-rotate(319deg) brightness(107%) contrast(100%);
+            & svg {
+                height: 2.2em;
             }
         }
     
         & button + button {
-            margin-top: 0.25rem;
+            margin-top: 0.25em;
         }
     }
 }
 
 .keen-slider {
-    width: 100%;
     aspect-ratio: 16 / 5;
+    width: 100%;
 }
 
 .keen-slider__slide {
   display: flex;
 }
 
-
-/* zitat styles zitat styles zitat styles zitat styles zitat styles */
-/* zitat styles zitat styles zitat styles zitat styles zitat styles */
-
 .quote {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    column-gap: 0.3125rem;
-    margin-block: 2.5rem;
+    column-gap: 0.3125em;
+    margin-block: 2.5em;
     background: linear-gradient(to right, var(--clr-green-light) calc((100% - 0.3125rem) / 2), transparent 0);
 }
 
@@ -196,9 +173,9 @@ main {
     }
 
     & p {
+        margin-block: 2em 0.8em;
         font-size: var(--fs-500);
         line-height: 1.4;
-        margin-block: 2rem 0.8rem;
     }   
 }
 
@@ -208,7 +185,7 @@ main {
         grid-template-columns: repeat(4, 1fr);
         column-gap: 1rem;
         margin-block: 3rem;
-        background: linear-gradient(to right, var(--clr-green-light) calc((100% - 1rem) / 2), transparent 0);
+        background: linear-gradient(to right, var(--clr-green-light) calc((100% - 1em) / 2), transparent 0);
     }
     
     .quote__inner-container {
@@ -216,13 +193,10 @@ main {
     }
 }
 
-
-/* sidebar styles */
-
 aside {
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    gap: 3em;
 }
 
 @media (width >= 50em) {
@@ -247,28 +221,28 @@ aside {
 }
 
 .card {
-    background-color: var(--clr-green-light);
     padding: 2em;
+    background-color: var(--clr-green-light);
 }
 
 .card__picture {
-    width: 100%;
     aspect-ratio: 3 / 2;
+    width: 100%;
     object-fit: cover;
 }
 
 .card-title {
+    margin-block: 1em 0.6em;
     color: var(--clr-ink);
-    margin-block: 1rem 0.6rem;
 
     & .subtitle {
         display: block;
-        font-family: var(--ff-body);
-        font-weight: var(--fw-light);
-        line-height: 1.6;
-        margin-top: 0.4rem;
-        font-size: var(--fs-400);
+        margin-top: 0.4em;
         color: var(--clr-ink);
+        font-family: var(--ff-body);
+        font-weight: var(--fw-medium);
+        font-size: var(--fs-400);
+        line-height: 1.6;
     }
 }
 
@@ -279,24 +253,24 @@ aside {
     }
 
     & li + li {
-        margin-top: 0.7rem; 
+        margin-top: 0.7em; 
     }
 
     & li::before {
         content: "";
         display: inline-block;
         flex-shrink: 0;
-        height: 1.6rem;
-        width: 1.6rem;
+        height: 1.6em;
+        width: 1.6em;
+        margin-top: 0.5em;
+        margin-inline: 0.2em 1.2em;
         background-size: contain;
         background-repeat: no-repeat;
-        margin-top: 0.5rem;
-        margin-inline: 0.2rem 1.2rem;
         opacity: 0.3;
     }
     
     & a {
-        margin-top: 0.5rem;
+        margin-top: 0.5em;
     }
 }
 
